@@ -1,3 +1,10 @@
+2011-03-26  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclCompExpr.c, generic/tclCompile.c, generic/tclExecute.c:
+	* generic/tclListObj.c, generic/tclNamesp.c, generic/tclObj.c:
+	* generic/tclStringObj.c, generic/tclUtil.c: Reduce the number of
+	casts used to manage Tcl_Obj internal representations.
+
 2011-03-24  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tcl.h (ckfree,etc.): Restored C++ usability to the memory
